<?xml version="1.0" encoding="utf-8"?>
<layout>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border"
    tools:context=".LearnFragment" >

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/learnpy"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="390dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="150dp"
        android:gravity="center"
        android:text="@string/learnhere"
        android:textSize="24sp" />

    <Button
        android:id="@+id/learnPybutton"
        android:layout_width="121dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/rounded_corners"
        android:text="@string/learnpython" />

</FrameLayout>
</layout>