<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/border"
        tools:context=".EndFragment">

        <TextView
            android:id="@+id/endText"
            android:layout_width="185dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/end"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/thanksText"
            android:layout_width="353dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="360dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/thanks"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp" />

        <Button
            android:id="@+id/playAgain"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="200dp"
            android:background="@drawable/rounded_corners"
            android:gravity="center"
            android:text="@string/playAgain"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHighlight="@color/accent2" />

        <TextView
            android:id="@+id/correct"
            android:layout_width="144dp"
            android:layout_height="63dp"
            android:layout_gravity="center"
            android:layout_marginBottom="105dp"
            android:background="@drawable/border"
            android:gravity="center"
            android:textColor="@color/colorAccent"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/messageText"
            android:layout_width="300dp"
            android:layout_height="43dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="220dp"
            android:gravity="center"
            android:textColor="@color/colorAccent"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/jokerUsedText"
            android:layout_width="355dp"
            android:layout_height="51dp"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:textColor="@color/colorAccent"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/quesText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="70dp"
            android:gravity="center"
            android:text="@string/ques"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            android:visibility="visible" />


    </FrameLayout>
</layout>