<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.navigation.StartFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/startConstraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/border">

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="400dp"
            android:layout_height="250dp"
            android:layout_marginStart="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="386dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:contentDescription="@string/app_name"
                app:srcCompat="@drawable/logo" />
        </FrameLayout>

        <Button
            android:id="@+id/playButton"
            android:layout_width="181dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="116dp"
            android:layout_marginLeft="116dp"
            android:layout_marginTop="67dp"
            android:layout_marginEnd="116dp"
            android:layout_marginRight="116dp"
            android:layout_marginBottom="160dp"
            android:background="@drawable/rounded_corners"
            android:fontFamily="@font/maven_pro_medium"
            android:foregroundGravity="center"
            android:gravity="center"
            android:onClick="showPopUp"
            android:text="@string/play"
            android:textColor="#161B33"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome"
            tools:ignore="OnClick" />

        <TextView
            android:id="@+id/welcome"
            android:layout_width="341dp"
            android:layout_height="48dp"
            android:layout_marginStart="36dp"
            android:layout_marginLeft="36dp"
            android:layout_marginTop="23dp"
            android:layout_marginEnd="36dp"
            android:layout_marginRight="36dp"
            android:layout_marginBottom="70dp"
            android:fontFamily="@font/maven_pro"
            android:foregroundGravity="center"
            android:gravity="center"
            android:text="@string/welcome"
            android:textColor="#161B33"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/playButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

        <TextView
            android:id="@+id/playText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginBottom="65dp"
            android:fontFamily="@font/maven_pro"
            android:foregroundGravity="center"
            android:gravity="center"
            android:text="@string/desc"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/playButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome" />

        <Button
            android:id="@+id/languageButton"
            android:layout_width="181dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="116dp"
            android:layout_marginLeft="116dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="116dp"
            android:layout_marginRight="116dp"
            android:layout_marginBottom="80dp"
            android:background="@drawable/rounded_corners"
            android:fontFamily="@font/maven_pro_medium"
            android:text="@string/changel"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/playButton" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
