<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <data>

        <variable
            name="game"
            type="com.example.pyquizapp.GameFragment"/>
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/border"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/easyConstraint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F1DAC4">

            <TextView
                android:id="@+id/questionText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginLeft="36dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="36dp"
                android:layout_marginRight="36dp"
                android:layout_marginBottom="28dp"
                android:fontFamily="@font/maven_pro"
                android:foregroundGravity="center"
                android:gravity="center"
                android:text="@{game.currentQuestion.text}"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/code"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="NotSibling"
                tools:text="Neki tekst" />

            <TextView
                android:id="@+id/code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="46dp"
                android:layout_marginLeft="36dp"
                android:layout_marginTop="136dp"
                android:layout_marginEnd="36dp"
                android:layout_marginRight="36dp"
                android:background="@drawable/code"
                android:padding="2dp"
                android:fontFamily="@font/maven_pro"
                android:foregroundGravity="center"
                android:text="@{game.currentQuestion.code}"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@+id/questionRadioGroup"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0"
                tools:ignore="NotSibling"

                tools:text="code" />

            <RadioGroup
                android:id="@+id/questionRadioGroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:animateLayoutChanges="true"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/code"
                tools:ignore="NotSibling"
                android:visibility="gone">

                <RadioButton
                    android:id="@+id/firstAnswerRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginEnd="50dp"
                    android:layout_marginRight="50dp"
                    android:checked="true"
                    android:text="@{game.answers[0]}"
                    tools:text="Blue" />

                <RadioButton
                    android:id="@+id/secondAnswerRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginEnd="50dp"
                    android:layout_marginRight="50dp"
                    android:text="@{game.answers[1]}"
                    tools:text="Green" />

                <RadioButton
                    android:id="@+id/thirdAnswerRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginEnd="50dp"
                    android:layout_marginRight="50dp"
                    android:text="@{game.answers[2]}"
                    tools:text="Yellow" />

                <RadioButton
                    android:id="@+id/fourthAnswerRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginEnd="50dp"
                    android:layout_marginRight="50dp"
                    android:text="@{game.answers[3]}"
                    tools:text="Yellow" />

            </RadioGroup>

            <Button
                android:id="@+id/submitButton"
                android:layout_width="181dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="116dp"
                android:layout_marginLeft="116dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="116dp"
                android:layout_marginRight="116dp"
                android:layout_marginBottom="210dp"
                android:background="@drawable/rounded_corners"
                android:fontFamily="@font/maven_pro_medium"
                android:foregroundGravity="center"
                android:gravity="center"
                android:text="@string/submit_button"
                android:textColor="#161B33"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/questionRadioGroup"
                tools:ignore="NotSibling" />

            <Button
                android:id="@+id/jokerButton"
                android:layout_width="181dp"
                android:layout_height="49dp"
                android:layout_marginStart="116dp"
                android:layout_marginLeft="116dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="116dp"
                android:layout_marginRight="116dp"
                android:layout_marginBottom="110dp"
                android:background="@drawable/rounded_corners"
                android:gravity="center"
                android:text="@string/joker"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/jokerText" />

            <TextView
                android:id="@+id/jokerText"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="55dp"
                android:layout_marginLeft="55dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="55dp"
                android:layout_marginRight="55dp"
                android:layout_marginBottom="28dp"
                android:foregroundGravity="center"
                android:gravity="center"
                android:text="@string/dontknow"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:visibility="visible"
                app:layout_constraintBottom_toTopOf="@+id/jokerButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/submitButton" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="55dp"
                android:layout_marginLeft="55dp"
                android:layout_marginEnd="55dp"
                android:layout_marginRight="55dp"
                android:layout_marginBottom="8dp"
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@+id/submitButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:hint="@string/question_answer"
                    android:visibility="invisible"
                    android:textColor="@color/colorAccent"
                    android:textColorHint="@color/accent2"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/questionText" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/checkBoxGroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="100dp"
                android:animateLayoutChanges="true"
                android:orientation="vertical"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/questionText"
                app:layout_constraintStart_toStartOf="@id/questionRadioGroup"
                app:layout_constraintTop_toTopOf="@id/submitButton">

                <CheckBox
                    android:id="@+id/firstAnswerCheck"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@{game.answers[0]}"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp"
                    tools:layout_editor_absoluteX="56dp"
                    tools:layout_editor_absoluteY="77dp" />

                <CheckBox
                    android:id="@+id/secondAnswerCheck"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@{game.answers[1]}"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp"
                    tools:layout_editor_absoluteX="56dp"
                    tools:layout_editor_absoluteY="77dp" />

                <CheckBox
                    android:id="@+id/thirdAnswerCheck"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@{game.answers[2]}"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp"
                    tools:layout_editor_absoluteX="56dp"
                    tools:layout_editor_absoluteY="77dp" />

                <CheckBox
                    android:id="@+id/fourthAnswerCheck"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@{game.answers[3]}"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp"
                    tools:layout_editor_absoluteX="56dp"
                    tools:layout_editor_absoluteY="77dp" />
            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>